2010-05-09  James Youngman  <jay@gnu.org>

	Update to the current version of the Google C++ Testing Framework.
	* bootstrap.conf (bootstrap_epilogue): Run autotools in
	./googletest once we're done bootstrapping in the top-level
	directory.
	* googletest/*: update to version 424 of the Google C++ Testing
	Framework.

2010-05-06  James Youngman  <jay@gnu.org>

	Mention some recent changes.
	* NEWS: Mention some recent changes.

	Various updates in docs/*
	* docs/patches.txt: Modernise the diff-preparation instructions
	(to ask people to use git).
	* docs/Platforms: Mention the recent versions of Debian we've
	tested on.  Change configure.in to configure.ac.  Indicate that
	CSSC is known to work with GCC 4.4.
	* docs/FIXED: Remove.
	* docs/Makefile.am (EXTRA_DIST): Don't distribute docs/FIXED.
	* auxfiles/CSSC.spec.in (%files): Remove docs/FIXED.
	* docs/borrowed-files.txt: Mention that bootstrap is taken from
	coreutils.  Mention that the GPL version is now 3.  Don't mention
	-unused/move-if-change, since we removed it.

2010-05-05  James Youngman  <jay@gnu.org>

	Use the correct type in calls to release::release().
	* sccsfile.cc (sccs_file): release floor and ceiling should be
	initialised from shorts not ints.
	* sf-admin.cc (admin): Likewise.

	Make "make"'s idea of the m4 macro directory consistent with "bootstrap"
	* Makefile.am (ACLOCAL_AMFLAGS): m4 files are in ./m4.  This is
	now consistent with what "bootstrap" thinks.
	* configure.ac: Likewise.

	Fix a number of compiler warnings.
	* mylist.h (mylist): mylist::operator=() should return a reference
	to *this, so change it so that it does.
	(mylist): Make mylist::length() return a size_t rather than an int.
	* delta.h (delta::delta): List the initalisers in the order they
	are actually performed.
	* defaults.h (NORETURN): Don't define "NORETURN" to "volatile void".
	* configure.ac: Disable warnings about aggregate return types and
	missed inlined opportunities.