@@ -1,3 +1,13 @@
+2010-05-11  James Youngman  <jay@gnu.org>
+
+	Fix some compilation warnings for val.o.
+	* sccsfile.h (subst_parms::subst_parms): Change the type of the
+	'l' parameter to avoid type conversion in the constructor.
+	* configure.ac (UNWANTED_WARNINGS): we don't want -Wnested-externs
+	since that is only useful for Objective C, which we are not using.
+	* release.h (release::operator unsigned long): Ass that the data is
+	non-negative before casting it.  Include cssc-assert.h.
+
 2010-05-09  James Youngman  <jay@gnu.org>
 
 	Update to the current version of the Google C++ Testing Framework.
